samples/echo-service/route/echo-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  ports:
    - name: http-port
      port: 80
      targetPort: http-port
      protocol: TCP
  selector:
    app: echo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: docker.io/jmalloc/echo-server
          ports:
            - name: http-port
              containerPort: 8080
              protocol: TCP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: echo
spec:
  host: test.pb-custom.hcpapps.net
  to:
    kind: Service
    name: echo
    weight: 100
  port:
    targetPort: http-port
  wildcardPolicy: None
